fixed sloppy featured-barber section on mobile

--- a/app/assets/stylesheets/barbers.scss
+++ b/app/assets/stylesheets/barbers.scss
@@ -51,6 +51,10 @@
 	height:30%;
 	position: relative;
 
+	@media (max-width: 500px) {
+		height: auto;
+		position: relative;
+	}
 	.barber {
 		margin: 20px 5px;
 		border-radius: 6px;
@@ -60,6 +64,16 @@
 		-webkit-animation-duration: 2s;
 		-webkit-animation-iteration-count: infinite;
 		z-index: 5;
+
+		@media (max-width: 500px){
+			margin: 10px 0;
+			height: auto;
+			.barber-avatar {
+				width: 100%;
+				padding-top: 30px;
+				padding-bottom: 0;
+			}
+		}
 
 		.barber-image {
 			top: calc(50% - 75px);
@@ -72,6 +86,15 @@
 				-webkit-animation-duration: 2s;
 				-webkit-animation-iteration-count: infinite;
 				width: 150px;
+			}
+			@media (max-width: 500px){
+				top: 0;
+				left: 0;
+				position: relative;
+				height: 100px;
+				width: 100px;
+				left: calc(50% - 50px);
+				img { width: 100px; }
 			}
 		}
 		.barber-details-container {
@@ -87,16 +110,26 @@
 				padding-top: 40px;
 				padding-right: 20px;
 			}
+			@media (max-width: 500px){
+				height: auto;
+				position: relative;
+				width: 100%;
+				left: 0;
+				top: 0;
+				padding: 20px;
+				padding-top: 0;
+
+				.barber-headline {
+					font-size: 13px;
+				}
+			}
 			.barber-name, .barber-location, .barber-price, .barber-headline {
 				text-align: left;
 				@media(max-width: 767px) { padding-left: 12vw }
 				@media(max-width: 550px) { text-align: center }
-				@media(max-width: 500px) { padding-left: 17vw }
-				@media(max-width: 450px) { padding-left: 19vw }
-			}
-			@media (max-width: 500px){
-				.barber-headline {
-					font-size: 13px;
+				@media(max-width: 500px) {
+					text-align: center;
+					padding-left: 0;
 				}
 			}
 		}
